[tool.poetry]
name = "Python Slack Bot x Relevance AI"
version = "1.0.0"
description = "A Python Flask app to run a Slack bot that uses Relevance AI to generate responses."
authors = ["Sam Goos <sam.goos@flowmatic.ai>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
slack = "^0.0.2"
python-dotenv = "^1.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"